infra/argo/overlays/cluster02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
      - argocd.c2.internal.zem.org.uk
    secretName: ingress-argocd-tls
  rules:
    - host: "argocd.c2.internal.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
